--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,11 +22,11 @@
 				</form>
 				<div class="login_line"></div>
 					<div class="button_section">
-						<a class="" href="find_id">아이디 찾기</a>
+						<a class="" th:href="@{find_id}">아이디 찾기</a>
 						<span class="hor_line">|</span>
-						<a class="" href="find_password">비밀번호 찾기</a>
+						<a class="" th:href="@{find_password}">비밀번호 찾기</a>
 						<span class="hor_line ">|</span>
-						<a class="" href="join">회원가입</a>
+						<a class="" th:href="@{join}">회원가입</a>
 					</div>
 			</div>
 		</div>
