--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 		<div id="body" style="padding-top: 28px;">
 			<div class="container">
 				<div class="ANBD_logo">
-					<img th:src="@{/img/logo.png}" th:onclick="location.href='/anbd'" style="cursor: pointer;">
+					<img th:src="@{/img/logo.png}" th:onclick="location.href='/anbd/main'" style="cursor: pointer;"/>
 				</div>
 				<div class="header_title">로그인</div>
 				<form action="logincheck" method="post">
