2022 01 17 15:55 [메인페이지 구현, 상품등록 페이지 구현]

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -19,13 +19,13 @@
 			<li>
 				<dl>
 					<dt><i class="fa fa-building-o" aria-hidden="true"></i></dt>
-					<dd>아나바다<br>공동대표이사 : 김범진,신범기,안준석<br>장치영,한병훈</dd>
+					<dd>아나바다<br>대표이사 : 장치영<br>장치영</dd>
 				</dl>
 			</li>
 			<li>
 				<dl>
 					<dt><i class="fa fa-file-text-o" aria-hidden="true"></i></dt>
-					<dd>사업자등록번호 : 111-01-11111<br>개인정보관리책임자 : 김범진</dd>
+					<dd>사업자등록번호 : 111-01-11111<br>개인정보관리책임자 : 장치영</dd>
 				</dl>
 			</li>
 			<li>
@@ -37,21 +37,13 @@
 			<li>
 				<dl>
 					<dt><i class="fa fa-phone" aria-hidden="true"></i></dt>
-					<dd>TEL. 010-4152-3998 [김범진]</dd>
-					<dd>TEL. 010-2951-0206 [신범기]</dd>
-					<dd>TEL. 010-9169-7045 [안준석]</dd>
 					<dd>TEL. 010-2313-0228 [장치영]</dd>
-					<dd>TEL. 010-7151-0762 [한병훈]</dd>
 				</dl>
 			</li>
 			<li>
 				<dl>
 					<dt><i class="fa fa-envelope-o" aria-hidden="true"></i></dt>
-					<dd>advensod@gmail.com [김범진] </dd>
-					<dd>beomki7429@gmail.com [신범기]</dd>
-					<dd>sws9169@gmail.com [안준석]</dd>
 					<dd>clduddkwk@naver.com [장치영]</dd>
-					<dd> hanbyeonghoon0762@gmail.com [한병훈]</dd>
 				</dl>
 			</li>
 		</ul>
@@ -59,7 +51,7 @@
 		<hr>
 
 		<p class="madeby">
-			<span class="fotter-text">2021.10.7 ~ 2021.10.30</span>
+			<span class="fotter-text">2022.01.04 ~ 2022.02.04</span>
 		</p>
 	</div>
 </footer>
