--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -4,7 +4,7 @@
 	position: inherit;
 }
 .fotter-continer {
-	padding: 40px 0px;
+    padding: 0px 0px 40px 0px;
 }
 .fotter-text {
 	color: white;
@@ -84,7 +84,7 @@ footer .info_list li dl dd {
 }
 #fnb li {
     float: left;
-    width: 19.3%;
+    width: 19.9%;
     height: 100%;
     box-sizing: border-box;
     text-align: center;
