2022 01 20 15:42 [상품 관심좋아요 구현]

--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -73,7 +73,7 @@
 
 .detail-subject {
 	font-size: 30px;
-    margin-bottom: 25px;
+    margin-bottom: 12px;
     font-weight: 600;
     line-height: 1.4;
 }
@@ -82,7 +82,9 @@
 	font-size: 35px;
     font-weight: 500;
 }
-
+.detail-sub-price {
+	margin-bottom: 16px;
+}
 .likeCount {
 	font-size: 13px;
 	line-height: 1.46;
@@ -92,7 +94,7 @@
 .product_info {
 	border-top: 1px solid;
 	display: flex;
-	padding: 30px 0px;
+	padding: 30px 0px 0px 0px;
 }
 .product_containor {
 	margin-right: 40px;
@@ -100,18 +102,26 @@
     height: 430px;
 }
 .product_content {
+	white-space: pre-wrap;
 	height: 250px;
 	overflow: auto;
 	font-size: 18px;
 	font-weight: 400;
+	font-family: monhwa;
 }
 
 .heart {
 	color: red;
 }
-
+.detail-other {
+	margin-top: 20px;
+	
+}
+.detail-other img {
+	margin-right: 5px;
+	margin-left: 3px;
+}
 .decal_button {
-	margin-top: -17px;
     margin-right: 7px;
 	float: right;
 	width: 18px;
@@ -175,7 +185,7 @@
 .single-item {
 	border: 1px solid rgb(238, 238, 238);
     position: relative;
-    width: 100%;
+    width: 430px;
     height: 100%;
     border-radius: 20px;
 }
