2022 01 24 15:04 [마이페이지 구현, 상품 디테일페이지 수정]

--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -64,7 +64,9 @@
 .detail-message {
 	text-align: left;
 	display: flex;
-	flex-flow: row-reverse;
+	justify-content: space-between;
+	border-top: 1px solid #e9ecef;
+	padding: 15px 0px 10px 0px;
 }
 
 .detail-message p {
@@ -188,4 +190,44 @@
     width: 430px;
     height: 100%;
     border-radius: 20px;
+}
+.fa-heart:before {
+    content: "\f004";
+    font-size: 25px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.fa-heart-o:before {
+    content: "\f08a";
+    font-size: 25px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+div.gradient-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-story {
+    background-color: #fff;
+    border: 1px solid #DBDBDB;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+.img-profile {
+    border: 1px solid #fafafa;
+}
+.story-list_li img {
+	width: 100%;
+    height: 220px;
+}
+.profile-text {
+	text-align: center;
+	overflow: hidden;
+    text-overflow: ellipsis;
+    height: 24px;
+    word-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
