--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,8 +23,8 @@
         <li class="nav-item">
          	<img class="img_profile" th:src="@{/img/messge.png}" onclick="location.href='mail.do'">
          	<div class="chat_cnt" id="mail_cnt">0</div>
-         	<img class="img_profile" th:src="@{/img/} + ${session.client.client_img}"  th:onclick="location.href='mypage'">
-       		<a class="btn btn-outline-success" th:href="@{join}" th:text="${session.client.client_nickname}"></a>
+         	<img class="img_profile" th:src="@{/img/} + ${session.client.client_img}"  th:onclick="|location.href='@{mypage(client_id=${session.client.client_id})}'|">
+       		<a class="btn btn-outline-success" th:href="@{mypage(client_id=${session.client.client_id})}" th:text="${session.client.client_nickname}"></a>
           <a class="btn btn-outline-success" th:href="@{logout}">로그아웃</a>
         </li>
         </th:block>
