--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,11 +4,11 @@
 	<div class="fotter-continer container">
 	<div id="fnb">
 			<ul>
-				<li><a href="index.do"><span>HOME</span></a></li>
-				<li><a href="useAgreement.do"><span>이용약관</span></a></li>
-				<li><a href="privacy.do"><span>개인정보보호방침</span></a></li>
-				<li><a href="location.do"><span>위치</span></a></li>
-				<li><a href="login.do"><span>로그인</span></a></li>
+				<li><a th:href="@{main}"><span>HOME</span></a></li>
+				<li><a th:href="@{useAgreement}"><span>이용약관</span></a></li>
+				<li><a th:href="@{privacy}"><span>개인정보보호방침</span></a></li>
+				<li><a th:href="@{location}"><span>위치</span></a></li>
+				<li><a th:href="@{login}"><span>로그인</span></a></li>
 			</ul>
 		</div>
 	<div style="display: flex;">
@@ -19,7 +19,7 @@
 			<li>
 				<dl>
 					<dt><i class="fa fa-building-o" aria-hidden="true"></i></dt>
-					<dd>아나바다<br>대표이사 : 장치영<br>장치영</dd>
+					<dd>아나바다<br>대표이사 : 장치영</dd>
 				</dl>
 			</li>
 			<li>
