--- a/src/main/resources/templates/salesList.html
+++ b/src/main/resources/templates/salesList.html
@@ -41,7 +41,7 @@
 							<div class="tab_content">
 								<div class="cat_box no_cat_box">
 									<div class="my_specialist_name">
-										<span th:text="|전체 ${f_cnt}|"></span>
+										<span th:text="|전체 ${s_cnt}|"></span>
 									</div>
 								</div>
 								<div class="tab_content">
@@ -55,11 +55,6 @@
 																<div class="image_wrapper">
 																	<div class="image_outside">
 																		<div class="image_centerbox">
-																			<th:block th:each="favorites : ${favorites_list}">
-																				<button class="deletebutton" th:if= "${favorites.favorites_product_no} == ${product.product_no}"> 
-																				<img class="deleteimg" th:src="@{/img/delete.png}" th:onclick="|location.href='@{favoritesDelete(favorites_no=${favorites.favorites_no})}'|">
-																				</button>
-																			</th:block>	
 																			<img th:src="@{/img/} + ${product.product_img1 }" th:onclick="|location.href='@{product_detail(product_no=${product.product_no})}'|"
 																				class="thumbnail_img" alt="${product.product_name }">
 																		</div>
