--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -28,10 +28,10 @@
 								<div class="my_profile_nick" th:text="${client.client_nickname}"></div>
 								<div class="my_profile_pro_review">
 									<div class="my_profile_pro_review_box">
-										<a class="list-group-item" th:href="@{pwCheck(client_id=${client.client_id})}"> <i class="bi bi-info-circle" style="margin-right: 10px;"></i>개인 정보 변경</a>
+										<a class="list-group-item" th:href="@{modify(client_id=${client.client_id})}"> <i class="bi bi-info-circle" style="margin-right: 10px;"></i>개인 정보 변경</a>
                     					<a class="list-group-item" th:href="@{mypage(client_id=${client.client_id})}"> <i class="bi bi-bag-plus" style="margin-right: 10px;"></i>판매 물품 관리<span class="badge badge-success" th:text="${p_cnt}"></span></a>
-                    					<a class="list-group-item" th:href="@{purchaselist}"><i class="bi bi-bag-fill" style="margin-right: 10px;"></i>구매 내역<span class="badge badge-success">${cnt.buy }</span></a>
-                    					<a class="list-group-item" th:href="@{saleslist}"> <i class="bi bi-journal-text" style="margin-right: 10px;"></i>판매 내역<span class="badge badge-success">${cnt.sell }</span></a>
+                    					<a class="list-group-item" th:href="@{purchaseList(client_id=${client.client_id})}"><i class="bi bi-bag-fill" style="margin-right: 10px;"></i>구매 내역<span class="badge badge-success" th:text="${b_cnt}"></span></a>
+                    					<a class="list-group-item" th:href="@{salesList(client_id=${client.client_id})}"> <i class="bi bi-journal-text" style="margin-right: 10px;"></i>판매 내역<span class="badge badge-success" th:text="${s_cnt}"></span></a>
 	                   					<a class="list-group-item" th:href="@{favoritesList(client_id=${client.client_id})}"><i class="bi bi-heart-fill" style="margin-right: 10px;"></i>관심 목록<span class="badge badge-success"th:text="${f_cnt}"></span></a>
 									</div>
 								</div>
