--- a/src/main/resources/templates/product_detail.html
+++ b/src/main/resources/templates/product_detail.html
@@ -69,7 +69,7 @@
 								</button>
 							</div>
 						</div>
-						<a class="btn btn-outline-success" href='MakeMail?pno=${client.client_id}'> 
+						<a class="btn btn-outline-success" th:href="@{message/room(product_no=${product.product_no})}"> 
 						<span style="font-size: 25px;">아나바다 채팅</span></a>
 					</div>
 					<div class="detail-other">
@@ -94,8 +94,6 @@
 						<span class="client_address" th:text="${client.client_address}"></span>
 					</div>
 				</div>
-				
-						<button th:onclick="|location.href='@{productModify(product_no=${product.product_no})}'|">수정하기</button>
 			</div>
 			<div>
 			 <span th:text="|${client.client_nickname} 님의 다른 상품|"></span>
